# NQueens

./: .gitignore  CMakeLists.txt  MinList.h  drawBoard.cpp  drawBoard.h  main.cpp  printBoard.cpp  printBoard.h
